--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
 
 <header>
-    <h1>Welcome to My Website</h1>
+    <h1>Welcome to My SigmaSite</h1>
 </header>
 
 <nav>
@@ -59,11 +59,11 @@
 
 <section>
     <h2>About Us</h2>
-    <p>This is a simple webpage created using HTML and CSS.</p>
+    <p>this is a page for sigmas but not alphas.</p>
 </section>
 
 <footer>
-    <p>&copy; 2024 My Website. All Rights Reserved.</p>
+    <p>&copy; 2024 SigmaSite. All Rights Reserved.</p>
 </footer>
 
 </body>
