even more sigma than before

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Webpage</title>
+    <title>My SigmaPage</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,13 +52,13 @@
 
 <nav>
     <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Contact</a>
+    <a href="#">AboutSigmas</a>
+    <a href="#">ServicesForSigmasBySigmas</a>
+    <a href="#">ContactingTheUpperSigma</a>
 </nav>
 
 <section>
-    <h2>About Us</h2>
+    <h2>About SigmaSite</h2>
     <p>this is a page for sigmas but not alphas.</p>
 </section>
 
