--- a/index.html
+++ b/index.html
@@ -1,34 +1,70 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=2"
-    />
-    <meta name="description" content="Description" />
-    <meta name="keywords" content="Keywords" />
-    <title>QR Scout</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My SigmaPage</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            background-color: #444;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav a {
+            text-decoration: none;
+            color: #fff;
+            padding: 0 10px;
+        }
+        nav a:hover {
+            color: #ccc;
+        }
+        section {
+            padding: 20px;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
 
-    <link rel="manifest" href="/manifest.json" />
-    <link
-      href="/icons/favicon-16x16.png"
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-    />
-    <link
-      href="/icons/favicon-32x32.png"
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-    />
-    <link rel="apple-touch-icon" href="/apple-icon.png" />
-    <meta name="theme-color" content="#317EFB" />
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<header>
+    <h1>Welcome to My SigmaSite</h1>
+</header>
+
+<nav>
+    <a href="#">Home</a>
+    <a href="#">AboutSigmas</a>
+    <a href="#">ServicesForSigmasBySigmas</a>
+    <a href="#">ContactingTheUpperSigma</a>
+</nav>
+
+<section>
+    <h2>About SigmaSite</h2>
+    <p>this is a page for sigmas but not alphas.</p>
+</section>
+
+<footer>
+    <p>&copy; 2024 SigmaSite. All Rights Reserved.</p>
+</footer>
+
+</body>
 </html>
