--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2024 Crescendo Game Tracker</title>
+    <title>2024 4063 Crescendo QRScout</title>
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     <style>
         body {
@@ -38,7 +38,7 @@
 </head>
 <body>
 
-    <h1>2024 Crescendo Game Tracker</h1>
+    <h1>QRScout 4063</h1>
     
     <div id="tracker">
         <button onclick="updateScore('autonomous', 1)">+</button>
@@ -86,8 +86,8 @@
             // Generate new QR code
             const qrCode = new QRCode(qrCodeContainer, {
                 text: qrCodeData,
-                width: 300,
-                height: 300,
+                width: 100,
+                height: 100,
             });
         }
     </script>
