showing our image

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             text-align: center;
             width: 50px;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -61,6 +65,9 @@
     <div id="qr-code">
         <!-- Placeholder for the QR code image -->
     </div>
+
+    <!-- Adding an image -->
+    <img src="antoniosigma.github.io/assets/markiplierLongFace.png" alt="Makripleiree longdf face">
 
     <script>
         const gameData = {
