--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
 
     <!-- Adding an image -->
-    <img src="antoniosigma.github.io/assets/markiplierLongFace.png" alt="Makripleiree longdf face">
+    <img src="assets/markiplierLongFace.png" alt="Makripleiree longdf face">
 
     <script>
         const gameData = {
