--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2024 4063 Crescendo QRScout</title>
+    <title>4063 Crescendo QRScout</title>
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 20px;
-            background-color: #f4f4f4;
+            background-color: #ffffff;
         }
         h1 {
             color: #333;
@@ -18,7 +18,7 @@
         #tracker {
             display: flex;
             justify-content: space-around;
-            margin: 20px;
+            margin: 2px;
         }
         button {
             padding: 10px;
@@ -28,17 +28,19 @@
             border: none;
             border-radius: 5px;
             background-color: #3498db;
-            color: #fff;
+            color: #FF69B4;
         }
         #qr-code {
             max-width: 300px;
             margin: 20px auto;
         }
+        <!-- TEXTBOX -->
         input {
             padding: 10px;
             font-size: 16px;
             text-align: center;
             width: 50px;
+            height: 100px
         }
         img {
             max-width: 100%;
