--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4063 Crescendo QRScout</title>
+    <h2 class="font-rhr-ns text-2xl uppercase text-white dark:text-black">Postmatch</h2>
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     <style>
         body {
@@ -27,8 +28,8 @@
             cursor: pointer;
             border: none;
             border-radius: 5px;
-            background-color: #3498db;
-            color: #FF69B4;
+            background-color: #FF69B4;
+            color: #ffffff;
         }
         #qr-code {
             max-width: 300px;
